--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   http:
   provider: ^6.0.0
   shared_preferences:
-
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   fluttertoast:
 
   # The following adds the Cupertino Icons font to your application.
